<resources>
    <string name="app_name">数传终端</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="regcode_title">用户注册</string>
    <string name="note">备注</string>
    <string name="customer_unit">客户单位</string>
    <string name="contacter">联系人</string>
    <string name="contact_number">联系电话</string>
    <string name="register">注册</string>
    <string name="gsm">GSM</string>
    <string name="network_title">网络异常</string>
    <string name="open_network">请开启网络！</string>
    <string name="set">设置</string>
    <string name="exit">退出</string>
    <string name="target_phone">目标号码</string>
    <string name="input_phonenumber">点击输入号码</string>
    <string name="note_name">备注姓名</string>
    <string name="number_format">选择制式</string>
    <string name="auto_selection">自动选择</string>
    <string name="gsm_cmcc">GSM-CMCC</string>
    <string name="gsm_all">GSM-ALL</string>
    <string name="tdscdma">TD-SCDMA</string>
    <string name="gsm_cucc">GSM-CUCC</string>
    <string name="wcdma">WCDMA</string>
    <string name="lte">LTE</string>
    <string name="cdma">CDMA</string>
    <string name="sms_to_induce">短信诱发</string>
    <string name="call_to_induce">拨打诱发</string>
    <string name="next">下一步</string>
    <string name="else_phone_format">目前该号码段还没有相应的制式，请联系客服！</string>
    <string name="sms_type_two">格式二</string>
    <string name="numbermanagement">号码管理</string>
    <string name="numberwhole">全部</string>
    <string name="record">记录1</string>
    <string name="addgroup">新建分组</string>
    <string name="updatenumber">修改号码</string>
    <string name="usedlogs">使用记录</string>
    <string name="movegroup">移至分组</string>
    <string name="delnumber">删除号码</string>
    <string name="groupname">分组名称</string>
    <string name="selectgroup">选择分组</string>
    <string name="export">导出</string>
    <string name="home">首页</string>
    <string name="new_input_number">新增目标号码</string>
    <string name="cancel">取消</string>
    <string name="history">历史记录</string>
    <string name="input_number">输入号码</string>
    <string name="canceldown">取消下载</string>
    <string name="reconnection">蓝牙已失去连接，点击此区域进行重连</string>
    <string name="device_list">设备列表</string>
    <string name="soft_update_updatebtn">确认更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="hasnohint">附近没有开启的蓝牙设备\n刷新列表重新搜索</string>
    <string name="community_information">小区信息</string>
    <string name="community_searchresult">小区信息</string>
    <string name="community_state">状态</string>
    <string name="community_count">计数</string>
    <string name="community_snr">SNR</string>
    <string name="community_freqhz">频偏</string>
    <string name="equipment_information">设备信息</string>
    <string name="basic_info">基本信息</string>
    <string name="target_name">姓名</string>
    <string name="communication_format">通信制式</string>
    <string name="device_temp">设备温度</string>
    <string name="device_electricity">设备电量</string>
    <string name="dsp">DSP</string>
    <string name="fpga">FPGA</string>
    <string name="mcu">MCU</string>
    <string name="tv_search_type">搜索方式</string>
    <string name="tv_search_unit">次</string>
    <string name="tv_currentformat">当前制式</string>
    <string name="tv_blindsearch">盲搜</string>
    <string name="tv_fixedsearch">定频</string>
    <string name="tv_frequency_param">频点参数</string>
    <string name="tv_activated">已激活：</string>
    <string name="tv_activate_unit">个</string>
    <string name="tv_serial_number">No</string>
    <string name="tv_frequency_point">频点</string>
    <string name="tv_signal_strength">能量</string>
    <string name="tv_clear_frequency_point">清除频点</string>
    <string name="rl_seq1">1</string>
    <string name="rl_seq2">2</string>
    <string name="rl_seq3">3</string>
    <string name="rl_seq4">4</string>
    <string name="rl_seq5">5</string>
    <string name="rl_seq6">6</string>
    <string name="rl_seq7">7</string>
    <string name="rl_seq8">8</string>
    <string name="btn_fixedstartsearch">开始搜索</string>
    <string name="btn_blindstartsearch">开始搜索</string>
    <string name="target_information">目标信息</string>
    <string name="clear_history">清空历史记录</string>
    <string name="lac">LAC</string>
    <string name="cid">CID</string>
    <string name="energy_column">能量</string>
    <string name="target_distance">距离</string>
    <string name="energy_info">能量信息</string>
    <string name="hit">命中</string>
    <string name="count">次</string>
    <string name="capture_info">捕获信息</string>
    <string name="dt_RxLeverInDbm">DT:</string>
    <string name="tv_msg">短信</string>
    <string name="targetindex">目标</string>
    <string name="tv_tel">拨打</string>
    <string name="targetnumber">目标号</string>
    <string name="targettmsi">TMSI</string>
    <string name="cellnumber">小区号</string>
    <string name="fontMode">当前模式</string>
    <string name="midk">窗口信息</string>
    <string name="syncpointtotal">窗口峰值</string>
    <string name="cdma_imsi">IMSI</string>
    <string name="cdma_esn">ESN</string>
    <string name="syncpointinwindow">全域峰值</string>
    <string name="successflag">成功指示</string>
    <string name="tmsivalue">目标TMSI</string>
    <string name="tmsifreq">TMSI频点</string>
    <string name="tmsitime">次数</string>
    <string name="continuous_capture_state">连续捕获状态 0</string>
    <string name="lte_ref">REF:</string>
    <string name="about_us">关于我们</string>
    <string name="msg_record">msg</string>
    <string name="system_info">系统信息</string>
    <string name="system_name">系统名称</string>
    <string name="single_pawn">单兵LTE手机测向系统</string>
    <string name="single_pawn_sczd">数传终端系统</string>
    <string name="check_version">检查固件版本</string>
    <string name="firmware_update">固件升级</string>
    <string name="query">查询</string>
    <string name="update">升级</string>
    <string name="cur_version">当前版本</string>
    <string name="welcome_msg">欢迎信息</string>
    <string name="service_tel">客服电话</string>
    <string name="tel">020-84762913</string>
    <string name="tel_snp">020-84762913</string>
    <string name="company_web">公司网站</string>
    <string name="close_device">关闭设备</string>
    <string name="diaoce">调测界面</string>
    <string name="rsa">RSA界面</string>
    <string name="dt_mode_conf">数传配置</string>
    <string name="debug_activity">调试工具集</string>
    <string name="oam">OAM界面</string>
    <string name="debug_data_acquisition">调试数据获取</string>
    <string name="lteActivateCAC">载波聚合开关</string>
    <string name="sms_test">短信功能测试</string>
    <string name="reg_info">注册信息</string>
    <string name="modify">修改f</string>
    <string name="web">hrst-china.com</string>
    <string name="company_ownership">广州慧睿思通信息科技有限公司版权所有</string>
    <string name="company_snp_ownership">广州慧睿思通信息科技有限公司</string>
    <string name="ownership">Copyright@2013 HRST Corp.All Right Reserved.</string>
    <string name="open_new_frament">开通新制式</string>
    <string name="update_registcode">更新号码制式</string>
    <string name="check_new_version">检查到新版本</string>
    <string name="new_version_info">新版本信息</string>
    <string name="check">检查</string>
    <string name="check_hint">提示</string>
    <string name="check_hint_content">不能进行版本更新检查</string>
    <string name="chek_hint_bluetooth_content">是否继续检查版本？</string>
    <string name="check_version_btoothdisconn">蓝牙未连接，是否连接蓝牙？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="close">关闭</string>
    <string name="low_gain">调试增益(-30≤P≤0)dbm</string>
    <string name="middle_gain">低增益(-50≤P≤-30)dbm</string>
    <string name="high_gain">中增益(-70≤P≤-50)dbm</string>
    <string name="superhigh_gain">高增益(-95≤P≤-70)dbm</string>
    <string name="low_gain_dt">调试增益(-19≤P≤-12)dbm</string>
    <string name="middle_gain_dt">低增益</string>
    <string name="high_gain_dt">中增益</string>
    <string name="superhigh_gain_dt">高增益</string>
    <string name="choose_gain">选择目标增益</string>
    <string name="choose_dt_gain">选择数传增益</string>
    <string name="gain_title">目标|数传 增益</string>
    <string name="auto_gain">自动增益</string>
    <string name="gain_sure">确认</string>
    <string name="locate">开始搜索</string>
    <string name="target">目标定位</string>
    <string name="target_jk">目标监听</string>
    <string name="none"></string>
    <string name="current_format">当前制式</string>
    <string name="choose_way">选择方式</string>
    <string name="monitor_mode">监听模式</string>
    <string name="get_way">捕获方案</string>
    <string name="set_value">设置多次诱捕门限值</string>
    <string name="tmsi_value">TMSI门限值</string>
    <string name="tayein_value">请输入多次诱捕门限值</string>
    <string name="set_param">设置参数</string>
    <string name="choose_target_way">选择目标定位方式</string>
    <string name="sms_content">短信内容</string>
    <string name="donot_show">不显示</string>
    <string name="induced_number">诱发号码</string>
    <string name="rsvd_number">MNC值</string>
    <string name="induced_phone">诱发手机号码</string>
    <string name="str_monitor_msg">短信</string>
    <string name="str_monitor_vol">语音</string>
    <string name="str_monitor_msgandvol">短信和语音</string>
    <string name="str_target_number">目标号码</string>
    <string name="str_target_imsi">目标IMSI</string>
    <string name="str_target_tmsi">目标TMSI</string>
    <string name="induced_sms_content">诱发短信内容</string>
    <string name="induced_number_or_sms">诱发手机号码或短信内容</string>
    <string name="nomal_get">常规捕获方案</string>
    <string name="tmsi_get">多次诱捕方案</string>
    <string name="tmsi_get_active">主叫捕获方案</string>
    <string name="induced_phone_esn">诱发手机ESN</string>
    <string name="cdma_target_way1">通过IMSI/ESN定位目标</string>
    <string name="cdma_target_way2">通过诱发机号码定位目标</string>
    <string name="induced_phone_imsi">诱发手机IMSI</string>
    <string name="target_phone_esn">目标手机ESN</string>
    <string name="target_phone_imsi">目标手机IMSI</string>
    <string name="ok">确定</string>
    <string name="input_induced_phone">输入诱发号码</string>
    <string name="input_imsi">输入IMSI</string>
    <string name="input_esn">输入ESN</string>
    <string name="gsm_hint_spare">注意：诱发间隔需大于5秒！</string>
    <string name="system_settings_title">系统设置</string>
    <string name="voice_count_off">目标能量值报数提醒</string>
    <string name="speech_settings">语音设置</string>
    <string name="night_mode">夜间模式</string>
    <string name="day_mode">白天模式</string>
    <string name="visual_patterns">视觉模式</string>
    <string name="leave_target">离开目标LAC时提醒</string>
    <string name="near_target">即将接近目标时语音提醒</string>
    <string name="temp_high">设备温度过高时提醒（默认60℃）</string>
    <string name="host_deficiency">主机电量不足时提醒（默认20%）</string>
    <string name="reset_default">恢复默认设置</string>
    <string name="temp_input">输入温度值</string>
    <string name="temp_default">默认温度值</string>
    <string name="host_input">输入电量值</string>
    <string name="host_default">默认电量值</string>
    <string name="title_alert">提示信息</string>
    <string name="device_self_checking">设备功能检测</string>
    <string name="voice_prompt_setting">语音提示设置</string>
    <string name="device_self_checking_setting">设备自检设置</string>
    <string name="wcdmasmsthreshold">wcdma短信阈值</string>
    <string name="msglimitvalue">短信阈值</string>
    <string name="smsthreshold">短信门限值：</string>
    <string name="phonethreshold">电话门限值：</string>
    <string name="groupsmsthreshold">组合模式短信门限：</string>
    <string name="dialog_crnti_conf">CRNTI配置</string>
    <string name="dt_crnti_conf_crnti_cid">CellId:</string>
    <string name="dt_crnti_conf_crnti_id">CRNTI:</string>
    <string name="input_debug_passwd">请输入调试密码</string>
    <string name="aux_level_mode">档位辅助模式</string>
</resources>