<?xml version="1.0" encoding="utf-8"?>
<!-- 
	@author   赵耿忠
	@describe 添加分组Dialog
	@date     2014.3.15
	@Version  1.1.1.3
	@修改者，修改日期，修改内容
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="322dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:background="@color/dialog_title_background"
        android:paddingBottom="12dp"
        android:paddingTop="12dp" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/addgroup"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_21" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/input_interface_background"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/tv_groupname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groupname"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/textsize_15" />

        <EditText
            android:id="@+id/et_group"
            android:layout_width="fill_parent"
            android:layout_height="36dip"
            android:background="@drawable/bg_edittext"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:maxLength="10"
            android:textSize="@dimen/textsize_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9c9a9c"
        android:orientation="horizontal"
        android:padding="3dp" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/btn_enable"
            android:textSize="@dimen/textsize_15" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/ok"
            android:textColor="@color/btn_enable"
            android:textSize="@dimen/textsize_15" />
    </LinearLayout>

</LinearLayout>