<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >
    <TextView
       style="@style/dialog_title"
       android:layout_width="match_parent"
       android:text="@string/input_debug_passwd" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_body"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">
        
        <EditText 
            android:id="@+id/edt_debug_passwd"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="numberPassword"
            android:textColor="@color/white"
            android:hint="请输入调试密码"
            android:maxLength="20"
            android:background="@drawable/edt_input"/>
          
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        	<Button 
				android:id="@+id/btn_debug_cancel"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:background="@drawable/fillet_select_bg"
				android:textColor="#fff"
				android:textSize="22sp"
				android:text="@string/cancel"/>
       		<Button 
				android:id="@+id/btn_debug_ok"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginLeft="10dp"
				android:background="@drawable/fillet_select_bg"
				android:textColor="#fff"
				android:textSize="22sp"
				android:text="@string/ok"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
